@@ -1,3 +1,9 @@
+2007-12-31 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b118
+
+ * Fix: Forgot some NetPBM from change in b115.
+
+  Thanks to vmole from forum.
+
 2007-12-29 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b117
 
  * Change: Removed setup/config_data.inc
